--- a/demo.ipynb
+++ b/demo.ipynb
@@ -59,7 +59,7 @@
       "source": [
         "!git clone https://github.com/AliaksandrSiarohin/first-order-model"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
       "source": [
         "cd first-order-model"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
         "\n",
         "HTML(display(source_image, driving_video).to_html5_video())"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2157,7 +2157,7 @@
         "\n",
         "HTML(display(source_image, driving_video, predictions).to_html5_video())"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5118,7 +5118,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**In the cell above we use relative keypoint displacement to animate the objects. We ca use absolute coordinates instead,  but in this way all the object proporions will be inherited from the driving video. For example Putin haircut will be extended to match Trump haircut.**"
+        "**In the cell above we use relative keypoint displacement to animate the objects. We can use absolute coordinates instead,  but in this way all the object proporions will be inherited from the driving video. For example Putin haircut will be extended to match Trump haircut.**"
       ]
     },
     {
@@ -5136,7 +5136,7 @@
         "predictions = make_animation(source_image, driving_video, generator, kp_detector, relative=False, adapt_movement_scale=True)\n",
         "HTML(display(source_image, driving_video, predictions).to_html5_video())"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8064,7 +8064,7 @@
       "source": [
         "!ffmpeg -i /content/gdrive/My\\ Drive/first-order-motion-model/07.mkv -ss 00:08:57.50 -t 00:00:08 -filter:v \"crop=600:600:760:50\" -async 1 hinton.mp4"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8177,7 +8177,7 @@
         "\n",
         "HTML(display(source_image, driving_video, predictions).to_html5_video())"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
