Remove requirements from comments

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -42,7 +42,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Clone repository and install all the requirments**"
+        "**Clone repository**"
       ]
     },
     {
@@ -71,16 +71,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZaHs0zSPFxyr",
-        "colab_type": "text"
-      },
-      "source": [
-        "**Restart Runtime**"
       ]
     },
     {
