--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2121,7 +2121,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Perfrorm image animation**"
+        "**Perform image animation**"
       ]
     },
     {
