Add additional link to drive

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -50,16 +50,16 @@
       "metadata": {
         "id": "UCMFMJV7K-ag",
         "colab_type": "code",
-        "outputId": "d4187a1d-60b7-46d5-cf05-b5b555d11138",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        }
+        },
+        "outputId": "d4187a1d-60b7-46d5-cf05-b5b555d11138"
       },
       "source": [
         "!git clone https://github.com/AliaksandrSiarohin/first-order-model"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,16 +78,16 @@
       "metadata": {
         "id": "PBp6l_4bBYUL",
         "colab_type": "code",
-        "outputId": "4d5061c1-d609-495e-b505-e94a9005a3ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "4d5061c1-d609-495e-b505-e94a9005a3ba"
       },
       "source": [
         "cd first-order-model"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,17 +113,17 @@
       "metadata": {
         "id": "tDbMA8R9OuUo",
         "colab_type": "code",
-        "outputId": "42716933-edfc-4871-a3b2-407b6bdf261a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
-        }
+        },
+        "outputId": "42716933-edfc-4871-a3b2-407b6bdf261a"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,8 @@
         "colab_type": "text"
       },
       "source": [
-        "**Add folder https://drive.google.com/drive/folders/1kZ1gCnpfU0BnpdU47pLM_TQ6RypDDqgw?usp=sharing  to your google drive.**"
+        "**Add folder https://drive.google.com/drive/folders/1kZ1gCnpfU0BnpdU47pLM_TQ6RypDDqgw?usp=sharing  to your google drive.\n",
+        "Alternativelly you can use this mirror link https://drive.google.com/drive/folders/16inDpBRPT1UC0YMGMX3dKvRnOUsf5Dhn?usp=sharing**"
       ]
     },
     {
@@ -163,11 +164,11 @@
       "metadata": {
         "id": "Oxi6-riLOgnm",
         "colab_type": "code",
-        "outputId": "df5ef72c-6133-4607-8684-045613fd81f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
-        }
+        },
+        "outputId": "df5ef72c-6133-4607-8684-045613fd81f2"
       },
       "source": [
         "import imageio\n",
@@ -208,7 +209,7 @@
         "\n",
         "HTML(display(source_image, driving_video).to_html5_video())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2111,7 +2112,7 @@
         "generator, kp_detector = load_checkpoints(config_path='config/vox-256.yaml', \n",
         "                            checkpoint_path='/content/gdrive/My Drive/first-order-motion-model/vox-cpk.pth.tar')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2129,11 +2130,11 @@
       "metadata": {
         "id": "SB12II11kF4c",
         "colab_type": "code",
-        "outputId": "c7f18b37-0d41-4761-e354-5b0c36cae30d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 471
-        }
+        },
+        "outputId": "c7f18b37-0d41-4761-e354-5b0c36cae30d"
       },
       "source": [
         "from demo import make_animation\n",
@@ -2147,7 +2148,7 @@
         "\n",
         "HTML(display(source_image, driving_video, predictions).to_html5_video())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5116,17 +5117,17 @@
       "metadata": {
         "id": "aOE_W_kfC9aX",
         "colab_type": "code",
-        "outputId": "de247531-c930-45a0-df41-e19a9373df2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 471
-        }
+        },
+        "outputId": "de247531-c930-45a0-df41-e19a9373df2c"
       },
       "source": [
         "predictions = make_animation(source_image, driving_video, generator, kp_detector, relative=False, adapt_movement_scale=True)\n",
         "HTML(display(source_image, driving_video, predictions).to_html5_video())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8045,16 +8046,16 @@
       "metadata": {
         "id": "brJlA_5o72Xc",
         "colab_type": "code",
-        "outputId": "75c10f77-409d-4793-b0cc-263bb20e6f76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "75c10f77-409d-4793-b0cc-263bb20e6f76"
       },
       "source": [
         "!ffmpeg -i /content/gdrive/My\\ Drive/first-order-motion-model/07.mkv -ss 00:08:57.50 -t 00:00:08 -filter:v \"crop=600:600:760:50\" -async 1 hinton.mp4"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8146,11 +8147,11 @@
       "metadata": {
         "id": "d8kQ3U7MHqh-",
         "colab_type": "code",
-        "outputId": "e1369c7c-8b23-4f9a-b6bc-9edd73c1f174",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 471
-        }
+        },
+        "outputId": "e1369c7c-8b23-4f9a-b6bc-9edd73c1f174"
       },
       "source": [
         "source_image = imageio.imread('/content/gdrive/My Drive/first-order-motion-model/09.png')\n",
@@ -8167,7 +8168,7 @@
         "\n",
         "HTML(display(source_image, driving_video, predictions).to_html5_video())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
