--- a/demo.ipynb
+++ b/demo.ipynb
@@ -16,6 +16,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AliaksandrSiarohin/first-order-model/blob/master/demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "cdO_RxQZLahB"
       },
       "source": [
@@ -35,7 +45,7 @@
         "!git pull -q origin master\n",
         "!git clone -q https://github.com/graphemecluster/first-order-model-demo demo"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
