--- a/demo.ipynb
+++ b/demo.ipynb
@@ -40,6 +40,7 @@
         "id": "UCMFMJV7K-ag"
       },
       "source": [
+        "!pip install imageio==2.4.1 &> /dev/null",
         "!pip install ffmpy &> /dev/null\n",
         "!git init -q .\n",
         "!git remote add origin https://github.com/AliaksandrSiarohin/first-order-model\n",
