Fix demo error with custom video

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -446,14 +446,14 @@
         "\t\tcontent = file_info['content']\n",
         "\tif content is not None:\n",
         "\t\tselected_video = 'user/' + name\n",
-        "\t\tpreview = resize(PIL.Image.fromarray(thumbnail(content)).convert(\"RGB\"))\n",
+        "\t\twith open(selected_video, 'wb') as video:\n",
+        "\t\t\tvideo.write(content)\n",
+        "\t\tpreview = resize(PIL.Image.fromarray(thumbnail(selected_video)).convert(\"RGB\"))\n",
         "\t\tinput_video_widget.clear_output(wait=True)\n",
         "\t\twith input_video_widget:\n",
         "\t\t\tdisplay(preview)\n",
         "\t\tinput_video_widget.add_class('uploaded')\n",
         "\t\tdisplay(Javascript('deselectVideos()'))\n",
-        "\t\twith open(selected_video, 'wb') as video:\n",
-        "\t\t\tvideo.write(content)\n",
         "upload_input_video_button.observe(upload_video, names='value')\n",
         "\n",
         "def change_model(change):\n",
@@ -491,16 +491,20 @@
         "\t\t)\n",
         "\tprogress_bar.clear_output()\n",
         "\timageio.mimsave('output.mp4', [img_as_ubyte(frame) for frame in predictions], fps=fps)\n",
-        "\tif selected_video.startswith('user/') or selected_video == 'demo/videos/0.mp4':\n",
+        "\ttry:\n",
         "\t\twith NamedTemporaryFile(suffix='.mp4') as output:\n",
-        "\t\t\tffmpeg.output(ffmpeg.input('output.mp4').video, ffmpeg.input(selected_video).audio, output.name, c='copy').overwrite_output().run()\n",
+        "\t\t\tffmpeg.output(ffmpeg.input('output.mp4').video, ffmpeg.input(selected_video).audio, output.name, c='copy').run()\n",
         "\t\t\twith open('output.mp4', 'wb') as result:\n",
         "\t\t\t\tcopyfileobj(output, result)\n",
+        "\texcept ffmpeg.Error:\n",
+        "\t\tpass\n",
+        "\toutput_widget.clear_output(True)\n",
         "\twith output_widget:\n",
         "\t\tvideo_widget = ipywidgets.Video.from_file('output.mp4', autoplay=False, loop=False)\n",
         "\t\tvideo_widget.add_class('video')\n",
         "\t\tvideo_widget.add_class('video-left')\n",
         "\t\tdisplay(video_widget)\n",
+        "\tcomparison_widget.clear_output(True)\n",
         "\twith comparison_widget:\n",
         "\t\tvideo_widget = ipywidgets.Video.from_file(selected_video, autoplay=False, loop=False, controls=False)\n",
         "\t\tvideo_widget.add_class('video')\n",
