--- a/demo_jupyter.ipynb
+++ b/demo_jupyter.ipynb
@@ -22,23 +22,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "id": "UCMFMJV7K-ag"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ffmpeg-python in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (0.2.0)\n",
+      "Requirement already satisfied: ipywidgets in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (8.1.1)\n",
+      "Requirement already satisfied: future in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ffmpeg-python) (0.18.3)\n",
+      "Requirement already satisfied: comm>=0.1.3 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipywidgets) (8.12.2)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipywidgets) (5.7.1)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.9 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipywidgets) (4.0.9)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0.9 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipywidgets) (3.0.9)\n",
+      "Requirement already satisfied: backcall in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: decorator in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (4.4.2)\n",
+      "Requirement already satisfied: jedi>=0.16 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.18.1)\n",
+      "Requirement already satisfied: matplotlib-inline in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.1.6)\n",
+      "Requirement already satisfied: pickleshare in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (3.0.36)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (2.15.1)\n",
+      "Requirement already satisfied: stack-data in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: typing-extensions in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (4.5.0)\n",
+      "Requirement already satisfied: pexpect>4.3 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (4.8.0)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30->ipython>=6.1.0->ipywidgets) (0.2.5)\n",
+      "Requirement already satisfied: executing in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: asttokens in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.0.5)\n",
+      "Requirement already satisfied: pure-eval in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: six in /root/anaconda3/envs/avatar/lib/python3.8/site-packages (from asttokens->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m/binhe/repos\n",
+      "/binhe/repos/first-order-model\n",
+      "fatal: destination path 'demo' already exists and is not an empty directory.\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
-    "%pip install ffmpeg-python imageio-ffmpeg\n",
-    "!git init .\n",
-    "!git remote add origin https://github.com/AliaksandrSiarohin/first-order-model\n",
-    "!git pull origin master\n",
-    "!git clone https://github.com/graphemecluster/first-order-model-demo demo"
+    "import os\n",
+    "\n",
+    "COLAB = False\n",
+    "try:  \n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    COLAB = True\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "if COLAB:\n",
+    "    %%capture\n",
+    "    %pip install ffmpeg-python imageio-ffmpeg\n",
+    "    !git init .\n",
+    "    !git remote add origin https://github.com/AliaksandrSiarohin/first-order-model\n",
+    "    !git pull origin master\n",
+    "    !git clone https://github.com/graphemecluster/first-order-model-demo demo\n",
+    "else:\n",
+    "    !pip install ffmpeg-python ipywidgets\n",
+    "    %cd /binhe/repos/\n",
+    "    if not os.path.exists(\"first-order-model\"):\n",
+    "        !git remote add origin https://github.com/AliaksandrSiarohin/first-order-model\n",
+    "        !git pull origin master\n",
+    "    %cd first-order-model\n",
+    "    !git clone https://github.com/graphemecluster/first-order-model-demo demo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {
     "id": "Oxi6-riLOgnm"
    },
@@ -201,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f53c7ccd3ec34f7ea8491237d5bf03ff",
+       "model_id": "25fe68ad149f4271a24340b9d5a2c40e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,6 +335,7 @@
     "import ipywidgets as ipyw\n",
     "from IPython.display import display, FileLink\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "os.makedirs(\"user\", exist_ok=True)\n",
     "\n",
     "display(HTML(\"\"\"\n",
@@ -782,9 +838,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "ldm",
+   "display_name": "Python [conda env:avatar]",
    "language": "python",
-   "name": "ldm"
+   "name": "conda-env-avatar-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -796,7 +852,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.18"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "307.2px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
